--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 
-###> symfony/framework-bundle ###
 /docker/mysql/data
 /.env.local
 /.env.local.php
 /.env.*.local
-/config/secrets/prod/prod.decrypt.private.php
-/public/bundles/
-/var/
 /vendor/
-###< symfony/framework-bundle ###
+.phpunit.result.cache
